# flinumeratr

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  README.md  app.py  dev_requirements.in  dev_requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  start.sh  start_prod.sh
.github/workflows/: deploy.yml  test.yml
glitch/: README.md  redirectr.py  requirements.in  requirements.txt  start.sh
scripts/: README.md  restart_prod.sh  start_prod.sh
src/flinumeratr/: app.py  base58.py  cli.py  enumerator.py  filters.py  flickr_api.py  models.py  url_parser.py
src/flinumeratr/flickr_photos_api/: __init__.py  _types.py  api.py  exceptions.py  utils.py
src/flinumeratr/static/: style.css
src/flinumeratr/static/icons/: README.md
src/flinumeratr/templates/: _errors.html  _footer.html  _form.html  _header.html  _license.html  base.html  error.html  homepage.html  images.html  index.html  see_photos.html
src/flinumeratr/templates/components/: errors.html  favicons.html  header.html
templates/: images.html  index.html
tests/: conftest.py  test_app.py  test_enumerator.py  test_filters.py  test_flickr_api.py  test_url_parser.py  utils.py
tests/fixtures/: __init__.py
tests/fixtures/api_responses/: 32812033543.json  album-72157640898611483-page2.json  album-72157640898611483.json  album-72157677773252346.json  gallery-72157677773252346.json  gallery-72157716953066942.json  group-geologists.json  group-slovenia.json  tag-botany.json  tag-sunset.json  user-george.json  user-spike_yun.json
tests/fixtures/cassettes/: TestCollectionsPhotoResponse.test_only_gets_publicly_available_sizes.yml  TestCollectionsPhotoResponse.test_sets_date_unknown_on_date_taken_in_collection.yml  TestCollectionsPhotoResponse.test_sets_originalformat_to_none_if_no_downloads.yml  TestCollectionsPhotoResponse.test_sets_owner_and_url_on_collection.yml  TestGetAlbum.test_can_get_album.yml  TestGetAlbum.test_empty_album_description_is_none.yml  TestGetAlbum.test_empty_album_title_is_none.yml  TestGetSinglePhoto.test_can_get_single_photo.yml  TestGetSinglePhoto.test_empty_photo_description_is_none.yml  TestGetSinglePhoto.test_empty_photo_title_is_none.yml  TestGetSinglePhoto.test_gets_photo_description.yml  TestGetSinglePhoto.test_gets_photo_title.yml  TestGetSinglePhoto.test_sets_date_unknown_on_date_taken.yml  TestGetSinglePhoto.test_sets_granularity_on_date_taken.yml  TestGetSinglePhoto.test_sets_realname_to_none_if_empty.yml  test_can_load_small_photos_with_downloads_disabled.yml  test_cant_find_resource_is_error.yml  test_empty_result_if_no_public_photos.yml  test_get_collection_methods_are_paginated[get_photos_in_album].yml  test_get_collection_methods_are_paginated[get_photos_in_gallery].yml  test_get_collection_methods_are_paginated[get_photos_in_group_pool].yml  test_get_collection_methods_are_paginated[get_photos_with_tag].yml  test_get_collection_methods_are_paginated[get_public_photos_by_user].yml  test_get_gallery_from_id.yml  test_get_licenses.yml  test_get_photos_from_flickr_url[album-page2].yml  test_get_photos_from_flickr_url[album].yml  test_get_photos_from_flickr_url[gallery].yml  test_get_photos_from_flickr_url[group].yml  test_get_photos_from_flickr_url[single_photo].yml  test_get_photos_from_flickr_url[tag].yml  test_get_photos_from_flickr_url[user].yml  test_get_photos_from_flickr_url_is_paginated[album].yml  test_get_photos_from_flickr_url_is_paginated[gallery].yml  test_get_photos_from_flickr_url_is_paginated[group].yml  test_get_photos_from_flickr_url_is_paginated[tag].yml  test_get_photos_from_flickr_url_is_paginated[user].yml  test_get_photos_in_gallery.yml  test_get_photos_in_group_pool.yml  test_get_photos_in_photoset.yml  (+52 more)
tests/fixtures/cassettes/test_get_photos_from_flickr_url[https:/www.flickr.com/groups/geologists/: -group-geologists].yml
tests/fixtures/cassettes/test_get_photos_from_flickr_url[https:/www.flickr.com/photos/spike_yun/: -user-spike_yun.json].yml
tests/fixtures/cassettes/test_get_photos_from_flickr_url[https:/www.flickr.com/photos/tags/: botany-tag-botany.json].yml
tests/fixtures/cassettes/test_get_photos_from_flickr_url_is_paginated[https:/www.flickr.com/groups/geologists/: pool].yml
tests/fixtures/cassettes/test_get_photos_from_flickr_url_is_paginated[https:/www.flickr.com/photos/: spike_yun].yml
tests/fixtures/cassettes/test_get_photos_from_flickr_url_is_paginated[https:/www.flickr.com/photos/spike_yun/: ].yml
tests/fixtures/cassettes/test_get_photos_from_flickr_url_is_paginated[https:/www.flickr.com/photos/tags/: botany].yml
tests/fixtures/cassettes/test_results_page_shows_info_box.https:/www.flickr.com/groups/birdguide/: -expected_text2.yml
tests/fixtures/results/: 47265398@N04.json
tests/flickr_photos_api/: test_api.py  test_utils.py
tests/stubs/: vcr.pyi
(+3 files in other folders)
