[build-system]
requires = [
    "setuptools >= 65",
]
build-backend = "setuptools.build_meta"

[project]
name = "flinumeratr"
authors = [
  {name = "Flickr Foundation", email = "hello@flickr.org"},
]
maintainers = [
  {name = "Alex Chan", email="alex@flickr.org"},
]
requires-python = ">=3.7"
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/Flickr-Foundation/flinumeratr"
"Changelog" = "https://github.com/Flickr-Foundation/flinumeratr/blob/main/CHANGELOG.md"

[project.scripts]
flinumeratr = "flinumeratr.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "flinumeratr.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flinumeratr = ["static", "templates"]

[tool.coverage.run]
branch = true
source = [
  "flinumeratr",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_also = [
  "from typing import",
  "from typing_extensions import",
  "if request.cls is not None",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error",

  # This hides a deprecation warnings in werkzeug on Python 3.12:
  #
  #     DeprecationWarning: ast.Str is deprecated and will be removed
  #     in Python 3.14; use ast.Constant instead
  #
  # There's a fix for this in werkzeug, but it's a version we aren't using:
  # https://github.com/pallets/werkzeug/issues/2704
  #
  # When we upgrade to a version of werkzeug that includes this fix (≥2.3.5),
  # we can remove this filter.
  "ignore::DeprecationWarning:werkzeug*:",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
