[build-system]
requires = [
    "setuptools >= 65",
]
build-backend = "setuptools.build_meta"

[project]
name = "flinumeratr"
authors = [
  {name = "Flickr Foundation", email = "hello@flickr.org"},
]
maintainers = [
  {name = "Alex Chan", email="alex@flickr.org"},
]
requires-python = ">=3.12"
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/Flickr-Foundation/flinumeratr"
"Changelog" = "https://github.com/Flickr-Foundation/flinumeratr/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "flinumeratr.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flinumeratr = ["static/*", "templates/*"]

[tool.coverage.run]
branch = true
source = [
  "flinumeratr",
  "tests",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_also = [
  "if request.cls is not None",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.interrogate]
fail_under = 35
omit-covered-files = true
